syntax = "proto3";

option csharp_namespace = "Shared.GrpcContracts";

import "google/protobuf/empty.proto";

service PlayerService {
    rpc GetAsync(google.protobuf.Empty) returns (stream PlayerDto);
}

message PlayerDto {
    string Name = 1;
    uint32 Health = 2;
    uint32 Hunger = 3;
    double Money = 4;
    uint32 Mood = 5;
    double PocketMoney = 6;
}